fixed a messsy spacing

--- a/style.scss
+++ b/style.scss
@@ -43,7 +43,7 @@ nav {
     z-index: 98;
 
     background-color: $maincolor;
-    height: 51px;
+    height: 52px;
     width: 100%;
 }
 
